# gemflow-diamond-price-mlops

./: README.md  app.py  dvc.yaml  init_setup.sh  params.yaml  pyproject.toml  template.py  tox.ini
.dvc/: config
.github/workflows/: testing.yaml
DiamondPricePred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
artifacts/: .gitignore  data.csv.dvc  metrics.json  model.pkl  model.pkl.dvc  preprocessor.pkl  preprocessor.pkl.dvc  test.csv
src/DiamondPricePred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: utils.py
templates/: form.html  index.html  result.html
tests/integration/: test_training_pipeline.py
tests/unit/: conftest.py  test_data_ingestion.py  test_data_transformation.py  test_edge_cases.py  test_model_trainer.py  test_utils.py
