[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "DiamondPricePred"
version = "0.1.0"
description = "An DiamondPricePred project using tox and GitHub Actions"
dependencies = ['pandas', 'numpy', 'scikit-learn', 'flask']

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "tox",
]